@@ -1,3 +1,11 @@
+2006-02-19  Miklos Szeredi <miklos@szeredi.hu>
+
+	* libfuse: fix use-after-free bug in interruptred reply_entry().
+	Patch from John Muir
+
+	* libfuse: fix wrong symbol versioning for fuse_mount.  Found by
+	Stéphane Rosi
+
 2006-02-02  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.5.2
